[gd_scene load_steps=7 format=2]

[ext_resource path="res://Texture/map_screen.png" type="Texture" id=1]
[ext_resource path="res://Texture/swamp.png" type="Texture" id=2]
[ext_resource path="res://Texture/factory.png" type="Texture" id=3]
[ext_resource path="res://Texture/castle.png" type="Texture" id=4]
[ext_resource path="res://Script/StageSelectScreen.gd" type="Script" id=5]
[ext_resource path="res://Song/selection.ogg" type="AudioStream" id=6]

[node name="StageSelectScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.64, 0.702782 )
texture = ExtResource( 1 )
centered = false

[node name="SwampSprite" type="Sprite" parent="."]
position = Vector2( 64, 152 )
scale = Vector2( 0.104, 0.0956652 )
texture = ExtResource( 2 )
centered = false

[node name="FactorySprite" type="Sprite" parent="."]
position = Vector2( 272, 192 )
scale = Vector2( 0.0933333, 0.0948148 )
texture = ExtResource( 3 )
centered = false

[node name="CastleSprite" type="Sprite" parent="."]
position = Vector2( 448, 40 )
scale = Vector2( 0.208, 0.185629 )
texture = ExtResource( 4 )
centered = false

[node name="SwampButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 224.0
margin_right = 169.0
margin_bottom = 244.0
text = "SWAMP STAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FactoryButton" type="Button" parent="."]
margin_left = 272.0
margin_top = 264.0
margin_right = 385.0
margin_bottom = 284.0
text = "FACTORY STAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CastleButton" type="Button" parent="."]
margin_left = 448.0
margin_top = 112.0
margin_right = 552.0
margin_bottom = 132.0
text = "CASTLE STAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 59.0
margin_bottom = 36.0
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="pressed" from="SwampButton" to="." method="_on_SwampButton_pressed"]
[connection signal="pressed" from="FactoryButton" to="." method="_on_FactoryButton_pressed"]
[connection signal="pressed" from="CastleButton" to="." method="_on_CastleButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
